# cross-answer-contradiction

./: .gitignore  CLAUDE.md  README.md  domain.py  evaluate.py  fca_engine.py  implementation-plan.md  oracle.py  prd.md  program.md  progress.md  pyproject.toml  run.py
baselines/: baseline_closedworld.py  baseline_cot.py  baseline_selfconsistency.py  baseline_structured.py  baseline_vanilla.py  common.py
docs/: AutoOntology_Architecture.md  AutoOntology_Research_Memo.md
experiments/: exp1_main.json  exp2_models.json  exp3_domains.json  exp4_ablation.json  exp5_scaling.json  exp6_synthetic.py  exp7_dpo_pairs.py  exp7v2_dpo_pairs.py  exp7v2_eval.py  exp7v3_classification.py  generate_synthetic_fca_dataset.py  run_experiments.py
gold_standards/: animals.json  build.py  countries.json  countries_30.json
tests/: test_fca_engine.py
