[project]
name = "autoontology"
version = "0.2.0"
description = "SLM hallucination guardrail via FCA attribute exploration with provable completeness"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-timeout>=2.2.0",
]
gold = [
    "SPARQLWrapper>=2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "requires_ollama: marks tests that need a running Ollama instance",
]
